# external_libjpeg-turbo

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/libjpeg-turbo_1290_cmake/: CMakeLists.txt
resources/libjpeg-turbo_cmake/: CMakeLists.txt
resources/libjpeg-turbo_cmake/include_macosx_amd64_clang/: config.h  jconfig.h
resources/libjpeg-turbo_cmake/include_windows_i386_msvc/: config.h
test/: CMakeLists.txt  libjpeg_test.cpp
